Realizando mejoras en la pantalla de login: ahora permite hacer visible la contraseña y evitamos re-definir el atributo 'id' de los inputs (tal vez esto ocasionaba ese bug raro de tipeo en los inputs).

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -575,6 +575,12 @@ iframe.mapa {
   text-align: center;
 }
 
+.login-checkbox {
+  text-align: right;
+  margin-top: -5px;
+  margin-bottom: 20px;
+}
+
 .login-error {
   color: red;
   margin-top: 2em;
